Fix missing color

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,11 +91,11 @@ code {
 
 a {
   text-decoration: none;
-  color: var(--accent-color);
+  color: var(--blue);
 }
 
-a:visited {
-  color: var(--accent-color);
+a:hover {
+  color: var(--light-blue);
 }
 
 ::-webkit-scrollbar {
@@ -131,6 +131,10 @@ a:visited {
 
 .text-danger {
   color: #dc3545;
+}
+
+.text-center {
+  text-align: center;
 }
 
 @media (max-width: 768px) {
